# leprikon

./: .bumpversion.cfg  .coveragerc  .gitignore  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  backup  build  docker-build  docker-compose.yml  manage.py  messages  openapitools.json  package.json  pyproject.toml  requirements.in  requirements.txt  restore  run  run-uwsgi  schema.yaml  setup.cfg  setup.py  stencil.config.ts  tox.ini  update-requirements.sh
.github/workflows/: CI.yml  docker-image.yml
conf/: nginx.conf  supervisord.conf
conf/supervisord/: cron.conf  gunicorn.conf  memcached.conf  nginx.conf  uwsgi.conf
docker/: Dockerfile  push
docker/app/: manage.py  run
docker/app/leprikon_site/: settings.py  urls.py  wsgi.py
docs/: Makefile  conf.py  index.rst  make.bat
leprikon/: __init__.py  __main__.py  apps.py  bankreaders.py  cms_app.py  cms_apps.py  cms_menus.py  cms_plugins.py  cms_toolbars.py  context_processors.py  cronjobs.py  gettext_overrides.py  mailers.py  menu.py  middleware.py  rocketchat.py  staticfiles.py  templatemailer.py  urls.py  utils.py
leprikon/admin/: __init__.py  account.py  activities.py  agegroup.py  agreements.py  bulkupdate.py  calendar.py  citizenship.py  clubs.py  courses.py  department.py  donation.py  events.py  export.py  filters.py  insurance.py  journals.py  leprikonsite.py  messages.py  orderables.py  organizations.py  pdf.py  place.py  printsetup.py  question.py  refundrequest.py  registrationlink.py  roles.py  school.py  schoolyear.py  sendmail.py  settings.py  statgroup.py  subjects.py  targetgroup.py  timesheets.py  transaction.py  user.py  utils.py
leprikon/api/: openapi.py  serializers.py  urls.py  views.py
leprikon/cms_plugins/: __init__.py  base.py  clubs.py  courses.py  events.py  leaders.py  orderables.py  schoolyears.py  subjects.py
leprikon/conf/: __init__.py  default_settings.py
leprikon/forms/: __init__.py  activities.py  billing_info.py  clubs.py  confirm.py  courses.py  events.py  fields.py  form.py  journals.py  leaders.py  messages.py  parent.py  participant.py  questions.py  refundrequest.py  registrationlink.py  registrations.py  schoolyear.py  subjects.py  support.py  timesheets.py  user.py  widgets.py
leprikon/forms/reports/: clubs.py  courses.py  debtors.py  events.py  orderables.py
leprikon/management/commands/: rocketchatsync.py  update_schools.py
leprikon/migrations/: 0001_initial.py  0002_initial_data.py  0002_messages.py  0003_managers.py  0003_parents.py  0004_multiple_registrations.py  0005_messageattachment.py  0005_subjectregistration_variable_symbol.py  0006_discount_periods.py  0007_bill_print_setup.py  0007_messages.py  0008_cms_plugins.py  0008_leprikonsite_company_name.py  0009_subjectpayment_received_by.py  0010_club_discounts.py  0010_subject_code.py  0011_subjectregistration_payment_requested.py  0012_place_on_delete_set_null.py  0012_subject_variants.py  0013_drop_insurance.py  0014_variable_symbol.py  0015_school_year_divisions.py  0016_countries.py  0016_school_year_divisions_cleanup.py  0017_citizenship.py  0017_insurance.py  0018_citizenship_cleanup.py  0018_insurance_cleanup.py  0019_department.py  0020_agreements.py  0020_registrations_cleanup.py  0021_user_agreement.py  0022_bankreader.py  0022_club_registration_history.py  0023_accountclosure.py  0024_price_not_mandatory.py  0024_subjectregistration_note.py  0025_agreements.py  0026_online_payments.py  0026_printsetup.py  (+72 more)
leprikon/migrations_0_1/: 0001_initial.py  0004_event_list_plugin.py  0006_deletable_pages.py  0009_cmsplugin_ptr.py  0011_registration_requests.py  0013_allow_duplicit_participants.py  0014_gender.py  0015_protect_leader.py  0016_countries.py  0017_insurance.py  0019_independent_registrations.py  0021_clubjournalentry_participants.py  0023_registration_price.py  0025_club_type.py  0027_version_1_0.py
leprikon/models/: __init__.py  account.py  activities.py  agegroup.py  agreements.py  calendar.py  citizenship.py  clubs.py  courses.py  department.py  donation.py  events.py  fields.py  insurance.py  journals.py  leprikonsite.py  messages.py  orderables.py  organizations.py  pdfmail.py  place.py  printsetup.py  question.py  refundrequest.py  registrationlink.py  registrations.py  roles.py  school.py  schoolyear.py  startend.py  statgroup.py  subjects.py  targetgroup.py  test_utils.py  times.py  timesheets.py  transaction.py  useragreement.py  utils.py
leprikon/search_indexes/: __init__.py  base.py  courses.py  events.py  orderables.py
leprikon/site/: settings.py  settings_mypy.py  urls.py  wsgi.py
leprikon/templates/: required_optional_field.html
leprikon/templates/admin/: base.html  change_list.html  change_list_results.html
leprikon/templates/leprikon/: activity_form.html  activity_journals.html  activity_list.html  activity_preview.html  activity_registration_form.html  alternating.html  base.html  billing_info_preview.html  brand.html  calendar-export.description.txt  club_alternating.html  club_detail.html  club_journal.html  club_list.html  club_participants.html  club_preview.html  club_registrations.html  clubjournalentry_form.html  clubjournalleaderentry_form.html  clubregistration_confirm.html  clubregistration_pdf.html  cms.html  (+94 more)
leprikon/templatetags/: leprikon_tags.py  rocketchat.py  staticfiles.py
leprikon/utils/: __init__.py  calendar.py
leprikon/views/: __init__.py  activities.py  billing_info.py  clubs.py  courses.py  donation.py  events.py  generic.py  journals.py  leaders.py  messages.py  parents.py  participants.py  pdf.py  refundrequest.py  registrationlink.py  registrations.py  schoolyear.py  subjects.py  summaries.py  summary.py  support.py  terms_conditions.py  timesheets.py  user.py
leprikon_tests/: conftest.py  settings.py  test_calendar.py  urls.py  wsgi.py
leprikon_tests/admin/: test_exports.py  test_searches.py
leprikon_tests/models/: test_utils.py
patch/: cmsplugin_filer_folder-cms_plugins.patch  filer-admin-imageadmin.patch
src/: api.ts  components.d.ts  index.html  index.ts  store.tsx
startup/: __startup__.html
(+169 files in other folders)
