[tool.black]
line-length = 120
exclude = "migrations*"

[tool.flake8]
exclude = "leprikon/tests,leprikon/migrations,leprikon/migrations_0_1"
max-line-length = 120

[tool.isort]
combine_as_imports = true
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "leprikon"
line_length = 120
multi_line_output = 3
profile = "black"
skip_glob = "*migrations*"
use_parentheses = true

[tool.poetry]
name = "leprikon"
version = "3.1.0"
description = "Django CMS based IS for education"
authors = ["Jakub Dorňák <jakub.dornak@misli.cz>"]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://leprikon.cz/"
repository = "https://github.com/leprikon-cz/leprikon"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: Czech",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "<4"
certbot-nginx = "*"
certbot = "*"
cmsplugin-filer = {git = "https://github.com/pawelmarkowski/cmsplugin-filer.git", rev = "2.0.2"}
django-bankreader = "*"
djangocms-googlemap = "*"
djangocms-link = "*"
djangocms-picture = "*"
djangocms-snippet = "*"
djangocms-style = "*"
djangocms-text-ckeditor = "*"
djangocms-video = "*"
django-cms = "*"
django-countries = "*"
django-cron = "*"
django-excel = "*"
django-filer = "*"
django-ganalytics = "*"
django-haystack = "*"
django-localflavor = "*"
django-mathfilters = "*"
django-multiselectfield = "*"
django-pays = "*"
django-qr-code = "*"
django-redis = "*"
django-staticfiles-downloader = "*"
django-template-admin = "*"
django-user-unique-email = "*"
django-verified-email-field = "*"
gunicorn = "*"
html2rml = "*"
ipython = "*"
lxml = "*"
mysqlclient = "*"
psycopg2-binary = "*"
pyexcel-xlsxw = "*"
PyICU = "*"
PyPDF2 = "*"
python-memcached = "*"
requests = "*"
sentry-sdk = "*"
schwifty = "*"
social-auth-app-django = "*"
sqlparse = "*"
trml2pdf = "*"
Whoosh = "*"
importlib-resources = "*"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
python-dotenv = "*"
pytest = "*"
mypy = "*"

[tool.poetry.scripts]
leprikon = 'leprikon.__main__:main'

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
