[tool.autoflake]
exclude = "migrations*"
ignore-init-module-imports = true
in-place = true
recursive = true
remove-all-unused-imports = true
remove-unused-variables = true

[tool.black]
line-length = 120
exclude = "migrations*"

[tool.isort]
combine_as_imports = true
known_first_party = "leprikon"
line_length = 120
profile = "black"
skip_glob = "*migrations*"

[tool.poetry]
name = "leprikon"
version = "3.9.4"
description = "Django CMS based IS for education"
authors = ["Jakub Dorňák <jakub.dornak@misli.cz>"]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://leprikon.cz/"
repository = "https://github.com/leprikon-cz/leprikon"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: Czech",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "<4"
certbot-nginx = "*"
certbot = "*"
django-bankreader = "*"
djangocms-audio = "*"
djangocms-file = "*"
djangocms-googlemap = "*"
djangocms-link = "*"
djangocms-picture = "*"
djangocms-snippet = "*"
djangocms-style = "*"
djangocms-text-ckeditor = "*"
djangocms-video = "*"
djangorestframework = "*"
djangorestframework-camel-case = "*"
django-admin-sortable2 = "<2"
django-cms = "*"
djangocms-admin-style = "<3.2.5"
django-countries = "*"
django-cron = "*"
django-excel = "*"
django-filer = "*"
django-ganalytics = "*"
django-haystack = "*"
django-localflavor = "*"
django-mathfilters = "*"
django-multiselectfield = "*"
django-pays = "*"
django-qr-code = "*"
django-redis = "*"
django-staticfiles-downloader = "*"
django-template-admin = "*"
django-user-unique-email = "*"
django-verified-email-field = "*"
drf-spectacular = "*"
drf-spectacular-sidecar = "*"
gunicorn = "*"
html2rml = "*"
ipython = "*"
lxml = "*"
mysqlclient = "*"
psycopg2-binary = "*"
pyexcel-xlsxw = "*"
PyICU = "*"
pypdf = "*"
python-memcached = "*"
requests = "*"
sentry-sdk = "*"
schwifty = "*"
social-auth-app-django = "*"
sqlparse = "*"
trml2pdf = "*"
Whoosh = "*"
importlib-resources = "*"

[tool.poetry.group.dev.dependencies]
autoflake = "*"
black = "*"
isort = "*"
python-dotenv = "*"
pytest = "*"
mypy = "*"
django-stubs = "*"

[tool.poetry.scripts]
leprikon = 'leprikon.__main__:main'

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
